modules/network/internet_gateway.tf
resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id
    tags = {
        Name = "${local.env[terraform.workspace]}-igw"
    }
}
